--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -159,6 +159,7 @@ rm -rf $RPM_BUILD_ROOT
 - Added citerefentry, refentrytitle, and manvolnum to list of QA'd tags. BZ #464038
 - Fixed '1' in ulink with no text. BZ #465411
 - Change env path to be more portable. Patch by Artem Zolochevskiy . BZ #466194
+- Added package meta to XHTML to allow content to be tracked to an RPM.
 
 * Wed Sep 3 2008 Jeff Fearn <jfearn@redhat.com> 0.37
 - Fix Bug in web rpm upgrade script.
