--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
 Version:	0.37
-Release:	0.t38%{?dist}
+Release:	0.t41%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -160,6 +160,8 @@ rm -rf $RPM_BUILD_ROOT
 - Fixed '1' in ulink with no text. BZ #465411
 - Change env path to be more portable. Patch by Artem Zolochevskiy . BZ #466194
 - Added package meta to XHTML to allow content to be tracked to an RPM.
+- Added catch for missing title and productname.
+- Changed Formal Para Title to follow parent indent. BZ #466309
 
 * Wed Sep 3 2008 Jeff Fearn <jfearn@redhat.com> 0.37
 - Fix Bug in web rpm upgrade script.
