--- a/publican/make/Makefile.l10n
+++ b/publican/make/Makefile.l10n
@@ -5,7 +5,8 @@
 XML_LANG	= en-US
 PROGNAME	= @PROGNAME@
 BRAND		= @BRAND@
-PRODUCT		= Software
+PRODUCT		= @PRODUCT@
+PROD_VERSION	= @PROD_VERSION@
 OTHER_LANGS	= @OTHER_LANGS@
 TRANSLATIONS	= $(XML_LANG) $(OTHER_LANGS)
  
