--- a/publican-redhat/Makefile
+++ b/publican-redhat/Makefile
@@ -58,38 +58,6 @@ clean:
 #	Common Content specific things
 #
 #######################################################################################
-update-pot:
-	@echo "Start $@"
-	@mkdir -p pot
-	@if [ -f en-US/Translatable-Entities.ent ]; then \
-		$(ENT2POT) en-US/Translatable-Entities.ent > pot/Translatable-Entities.pot;\
-	fi
-	@pushd en-US > /dev/null; \
-		for xml_file in `find . -maxdepth 1 -name "*.xml"`; do \
-			pot_file=`echo $$xml_file | sed -e 's/\.xml/\.pot/'`;\
-			xml2pot $$xml_file | msguniq  > ../pot/$$pot_file;\
-		done; \
-	popd  > /dev/null;
-	@echo "End $@"
-
-# Get this in to SVN?
-#CVS_ROOT = cvs.devel.redhat.com:/cvs/ecs
-#CVS_REPO = GUI_Strings/documentation-devel-RHEL
-
-#resync-po:: clean
-#	@echo "Start $@"
-#	@echo  "	Exporting PO files from $(CVS_ROOT)/$(CVS_REPO)"
-#	@mkdir -p tmp/CVS
-#	@pushd tmp/CVS  > /dev/null; \
-#		cvs -d $(CVS_ROOT) export -r HEAD $(CVS_REPO); \
-#	popd > /dev/null;
-#	@echo "	Copying PO files"
-#	@pushd tmp/CVS/$(CVS_REPO)  > /dev/null; \
-#		find . -name Legal_Notice.po | xargs --no-run-if-empty rm;\
-#		find . -name *.po | sed -e 's/\.\///g' | xargs -i{} cp {} $(PWD)/{}; \
-#	popd > /dev/null;
-#	@echo "End $@"
-
 
 Common_Content::
 	@echo "Start $@"
@@ -133,4 +101,58 @@ clean_ids:
 		xmlClean -strict 1 -U -in $$file -out $$file -book $(REAL_BRAND) -cleanids ; \
 	done && cd ..;
 	@echo "END: $@ `date`"
+
+#######################################################################################
+#
+#	Translation specific things
+#
+#######################################################################################
+
+update-pot:
+	@echo "Start $@"
+	@mkdir -p pot
+	@pushd en-US > /dev/null; \
+		for xml_file in `find . -maxdepth 1 -name "*.xml" | grep -v Legal_Notice`; do \
+			pot_file=`echo $$xml_file | sed -e 's/\.xml/\.pot/'`;\
+			xml2pot $$xml_file | msguniq  > ../pot/$$pot_file;\
+		done; \
+	popd  > /dev/null;
+	@echo "End $@"
+
+# TODO: Get this in to SVN
+SOURCE	= https://svn.devel.redhat.com/repos/ecs/Software/$(NAME)
+SOFTWARE_SOURCE = http://svn.fedorahosted.org/svn/publican/trunk/$(NAME)/pot
+TRANS_VERSION = 0.12
+PROD_VERSION = 1.0
+
+resync-po:: clean
+	@echo "Start $@"
+	@echo  "	Exporting PO files from $(SOURCE)/$(TRANS_VERSION)"
+	@mkdir -p tmp/SVN
+	@pushd tmp/SVN  > /dev/null; \
+		svn export $(SOURCE)/$(TRANS_VERSION) gui_strings; \
+	popd > /dev/null;
+	@pushd tmp/SVN/gui_strings  > /dev/null; \
+		find . -name *.po | sed -e 's/\.\///g' | xargs -i{} cp {} $(PWD)/{}; \
+	popd > /dev/null;
+	@echo "End $@"
+
+create_l10n:: clean
+	@echo "Start $@"
+	mkdir -p tmp/$(VERSION)/pot
+	cp ../publican/make/Makefile.l10n tmp/$(VERSION)/Makefile
+	sed -i -e 's/@PROGNAME@/$(NAME)/g' tmp/$(VERSION)/Makefile
+	sed -i -e 's/@PRODUCT@/$(NAME)/g' tmp/$(VERSION)/Makefile
+	sed -i -e 's/@PROD_VERSION@/$(PROD_VERSION)/g' tmp/$(VERSION)/Makefile
+	sed -i -e 's/@BRAND@/$(REAL_BRAND)/g' tmp/$(VERSION)/Makefile
+	sed -i -e 's/@OTHER_LANGS@/$(LANGS)/g' tmp/$(VERSION)/Makefile
+	perl -p -i -e 's|\@SOFTWARE_SOURCE\@|$(SOFTWARE_SOURCE)|g' tmp/$(VERSION)/Makefile
+	make -C tmp/$(VERSION) update-po-all
+	cp pot/*.pot tmp/$(VERSION)/pot/.
+	find . -name *.po | sed -e 's/\.\///g' | xargs -i{} cp {} tmp/$(VERSION)/{}
+	make -C tmp/$(VERSION) update-po-all
+	make -C tmp/$(VERSION) clean
+	rm tmp/$(VERSION)/pot/messages.mo
+#	cd tmp && svn import -m"initial import of $(NAME) $(VERSION)" $(VERSION) $(SOURCE)/$(VERSION)
+	@echo "End $@" 
 
