--- a/publican/make/Makefile.l10n
+++ b/publican/make/Makefile.l10n
@@ -9,6 +9,7 @@ PRODUCT		= @PRODUCT@
 PROD_VERSION	= @PROD_VERSION@
 OTHER_LANGS	= @OTHER_LANGS@
 TRANSLATIONS	= $(XML_LANG) $(OTHER_LANGS)
+TRANSLATIONS	= $(XML_LANG) $(OTHER_LANGS)
  
 COMMON_CONFIG  = /usr/share/publican
 include $(COMMON_CONFIG)/make/Makefile.GUI
