--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -165,6 +165,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fix clean_ids removing comments. BZ #467145
 - Fix missing revhistory giving useless error. BZ #467147
 - Stopped proecssing xml files in extras directory.
+- Added conditional tagging to user Guide. By Don Domingo.
 
 * Wed Sep 3 2008 Jeff Fearn <jfearn@redhat.com> 0.37
 - Fix Bug in web rpm upgrade script.
