--- a/publican/make/Makefile.templates
+++ b/publican/make/Makefile.templates
@@ -585,8 +585,13 @@ web-srpm-${1}:: clean tardir-${1}
 	@cd tmp/tar && tar --create --gzip --exclude-from=$(COMMON_CONFIG)/make/tar-excludes --file $(TAR_NAME)-web-${1}-$(RPM_VERSION)-$(${1}_RPM_RELEASE).tgz $(TAR_NAME)-web-${1}-$(RPM_VERSION)
 	@mkdir -p tmp/rpm/SPECS tmp/rpm/SOURCES tmp/rpm/SRPMS
 	@cp tmp/tar/$(TAR_NAME)-web-${1}-$(RPM_VERSION)-$(${1}_RPM_RELEASE).tgz tmp/rpm/SOURCES/.
-	@rev_file=`grep -l revhistory $(XML_LANG)/*| head -n 1 | sed -e 's/$(XML_LANG)\///g'`; \
-		if [ ! -f "$$$$rev_file" ]; echo "No revhistory found"; exit 5; fi \
+	@rev_file=`grep -l '<revhistory' $(XML_LANG)/*| head -n 1 | sed -e 's/$(XML_LANG)\///g'`; \
+		if [ ! -f "$(XML_LANG)/$$$$rev_file" ]; then \
+			echo; \
+			echo "*ERROR: No revhistory found*"; \
+			echo "You need a correctly formatted Revision History to build RPMS"; \
+			exit 5; \
+		fi; \
 		$(CATALOGS) $(XSLTPROC) $(COMMON_CONFIG)/xsl/changelog.xsl tmp/${1}/xml/$$$$rev_file > tmp/changelog.txt
 	@$(CATALOGS) $(XSLTPROC)  --path "$(PWD)" --stringparam book-title "$(TAR_NAME)" \
 		--stringparam lang "${1}" \
