--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -5,12 +5,11 @@
 
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
-Version:	0.37
-Release:	0.t58%{?dist}
+Version:	0.38
+Release:	0%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
-#	content
-#	Book_Template
+#	content, Book_Template, Set_Template, Article_Template
 Group:		Applications/Text
 Buildroot:	%{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 Buildarch:	noarch
@@ -147,7 +146,7 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
-* Fri Sep 19 2008 Jeff Fearn <jfearn@redhat.com> 0.38
+* Thu Oct 16 2008 Jeff Fearn <jfearn@redhat.com> 0.38
 - Fix inline tags removing following new line in verbatim tags. BZ #461369
 - Fix Numeration settings for HTML ordered lists. BZ #462601
 - Fix PDF Example background color. BZ #463127
