Fixed contrib class in CSS. BZ #469595
git-svn-id: file:///srv/svn/publican/trunk@549 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -154,6 +154,7 @@ rm -rf $RPM_BUILD_ROOT
 - Added foreignphrase to list of validated tags.
 - Add foreignphrase to list of tags aspell should ignore.
 - Fixed left align of verbatim items in notes.
+- Fixed contrib class in CSS. BZ #469595
 
 * Thu Oct 16 2008 Jeff Fearn <jfearn@redhat.com> 0.38
 - Fix inline tags removing following new line in verbatim tags. BZ #461369
