Changed para & simpara to div in HTML. BZ #469286
git-svn-id: file:///srv/svn/publican/trunk@550 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -155,6 +155,7 @@ rm -rf $RPM_BUILD_ROOT
 - Add foreignphrase to list of tags aspell should ignore.
 - Fixed left align of verbatim items in notes.
 - Fixed contrib class in CSS. BZ #469595
+- Changed para & simpara to div in HTML. BZ #469286
 
 * Thu Oct 16 2008 Jeff Fearn <jfearn@redhat.com> 0.38
 - Fix inline tags removing following new line in verbatim tags. BZ #461369
