Fix layout of author in Revision History. BZ #469986 (Still need to fix row spacing in PDF)
git-svn-id: file:///srv/svn/publican/trunk@554 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -156,6 +156,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fixed left align of verbatim items in notes.
 - Fixed contrib class in CSS. BZ #469595
 - Changed para & simpara to div in HTML. BZ #469286
+- Fix layout of author in Revision History. BZ #469986 (Still need to fix row spacing in PDF)
 
 * Thu Oct 16 2008 Jeff Fearn <jfearn@redhat.com> 0.38
 - Fix inline tags removing following new line in verbatim tags. BZ #461369
