--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
 Version:	0.38
-Release:	0.t10%{?dist}
+Release:	0.t11%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content, Book_Template, Set_Template, Article_Template
@@ -152,14 +152,18 @@ rm -rf $RPM_BUILD_ROOT
 - Add catch for ValidateTables where table for tgroup could not be found. BZ #468789
 - Fix right margin error on verbatim and admonitions in PDF. BZ #467654
 - Added foreignphrase to list of validated tags.
-- Add foreignphrase to list of tags aspell should ignore.
+- Add foreignphrase, acronym, hardware to list of tags aspell should ignore.
 - Fixed left align of verbatim items in notes.
 - Fixed contrib class in CSS. BZ #469595
 - Changed para & simpara to div in HTML. BZ #469286
 - Fix layout of author in Revision History. BZ #469986
-- Added function to list of validated tags. BZ #471144
+- Validated function tag. BZ #471144
 - Fixed menu entry text. BZ #470967
-
+- Validated type, methodname, exceptionname, varname, interfacename tags. BZ #461708
+- Banned glosslist (untranslatable) BZ #461864
+- Validated uri, mousebutton, hardware tags. BZ #461870
+- Validated othername tag. BZ #464315
+ 
 * Thu Oct 16 2008 Jeff Fearn <jfearn@redhat.com> 0.38
 - Fix inline tags removing following new line in verbatim tags. BZ #461369
 - Fix Numeration settings for HTML ordered lists. BZ #462601
