--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -164,6 +164,7 @@ rm -rf $RPM_BUILD_ROOT
 - Validated uri, mousebutton, hardware tags. BZ #461870
 - Validated othername tag. BZ #464315
 - Removed collab from front page to match PDF output. BZ #469298
+- Formalised handling of draft mode, root node only. BZ #468305
 
 * Thu Oct 16 2008 Jeff Fearn <jfearn@redhat.com> 0.38
 - Fix inline tags removing following new line in verbatim tags. BZ #461369
