make type case insensitive
git-svn-id: file:///srv/svn/publican/trunk@567 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -165,7 +165,7 @@ rm -rf $RPM_BUILD_ROOT
 - Validated othername tag. BZ #464315
 - Removed collab from front page to match PDF output. BZ #469298
 - Formalised handling of draft mode, root node only. BZ #468305
-- Removed old help text from create_book. BZ #471776
+- Removed old help text from create_book and make type case insensitive. BZ #471776
 
 * Thu Oct 16 2008 Jeff Fearn <jfearn@redhat.com> 0.38
 - Fix inline tags removing following new line in verbatim tags. BZ #461369
