update change log
git-svn-id: file:///srv/svn/publican/trunk@572 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -159,7 +159,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fix layout of author in Revision History. BZ #469986
 - Validated function tag. BZ #471144
 - Fixed menu entry text. BZ #470967
-- Validated type, methodname, exceptionname, varname, interfacename tags. BZ #461708
+- Validated type, methodname, excAppendix.xmleptionname, varname, interfacename tags. BZ #461708
 - Banned glosslist (untranslatable) BZ #461864
 - Validated uri, mousebutton, hardware tags. BZ #461870
 - Validated othername tag. BZ #464315
