--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -323,7 +323,8 @@ publish-report:: report-all
 		echo "Invalid Report request, no POT files exist."; \
 		exit 2; \
 	fi
-	@cd pot && po2sgml --report *.pot >& ../tmp/reports/$(XML_LANG).txt
+	@po2sgml --report `find pot -name \*.pot | sort` >& tmp/reports/$(XML_LANG).txt
+	@sed -i -e 's/^$(XML_LANG)\///g' tmp/reports/$(XML_LANG).txt
 	@sed -i -e 's/\.pot/\.xml/g' tmp/reports/$(XML_LANG).txt
 	@cd tmp/reports && StSe_Reports --book=$(DOCNAME) --src_lang=$(XML_LANG) --product=$(PRODUCT) --version=$(PROD_VERSION)
 # copy original common images, then copy translated images over the top
