Reapply fix for BZ #466309
git-svn-id: file:///srv/svn/publican/trunk@574 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -168,6 +168,7 @@ rm -rf $RPM_BUILD_ROOT
 - Removed old help text from create_book and make type case insensitive. BZ #471776
 - Fixed footnote numbers collapsing together. BZ #462668
 - Fix translation report for po in nested directories.
+- Changed Formal Para Title to follow parent indent. BZ #466309
 
 * Thu Oct 16 2008 Jeff Fearn <jfearn@redhat.com> 0.38
 - Fix inline tags removing following new line in verbatim tags. BZ #461369
