--- a/publican/content/docs/Makefile
+++ b/publican/content/docs/Makefile
@@ -5,6 +5,7 @@
 XML_LANG	= en-US
 
 #OTHER_LANGS	= as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
+OTHER_LANGS = de-DE
 
 CHUNK_FIRST	= 0
 
