--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
 Version:	0.38
-Release:	0.t21%{?dist}
+Release:	0.t23%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content, Book_Template, Set_Template, Article_Template
@@ -169,6 +169,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fixed footnote numbers collapsing together. BZ #462668
 - Fix translation report for po in nested directories.
 - Changed Formal Para Title to follow parent indent. BZ #466309
+- Validated qandadiv, tweaked layout. BZ #472482
 
 * Thu Oct 16 2008 Jeff Fearn <jfearn@redhat.com> 0.38
 - Fix inline tags removing following new line in verbatim tags. BZ #461369
