--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -174,6 +174,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fix dot on docnav css. BZ #472627
 - Fix ol display in article. BZ #472491
 - Added section of Drafting rules. (bforte)
+- Fix CCS display of image in term.
 
 * Thu Oct 16 2008 Jeff Fearn <jfearn@redhat.com> 0.38
 - Fix inline tags removing following new line in verbatim tags. BZ #461369
