--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -494,7 +494,7 @@ help_params::
 	@echo
 	@echo "DOC_TYPE: Defaults to Book, can also be Article or Set. Currently: $(DOC_TYPE)"
 	@echo
-	@echo "DOC_URL: URL for top left link in html. Currently: $(DOC_URL)"
+	@echo "DOC_URL: URL for top right link in html. Currently: $(DOC_URL)"
 	@echo
 	@echo "GENERATE_SECTION_TOC_LEVEL: Include a TOC at the given section level. Currently: $(GENERATE_SECTION_TOC_LEVEL)"
 	@echo
@@ -505,6 +505,8 @@ help_params::
 	@echo
 	@echo "PRODUCT: Product this book is associated with. Currently: $(PRODUCT)"
 	@echo "	When this book is published it will be nested in a directory named after the product"
+	@echo
+	@echo "PROD_URL: URL for top left link in html. Currently: $(PROD_URL)"
 	@echo
 	@echo "SHOW_REMARKS:  0 or 1. Display contents of remark tags in output? Currently $(SHOW_REMARKS)"
 	@echo
