--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -5,8 +5,8 @@
 
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
-Version:	0.38
-Release:	0.t34%{?dist}
+Version:	0.39
+Release:	0%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content, Book_Template, Set_Template, Article_Template
@@ -146,7 +146,7 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
-* Fri Oct 17 2008 Jeff Fearn <jfearn@redhat.com> 0.39
+* Mon Dec 1 2008 Jeff Fearn <jfearn@redhat.com> 0.39
 - Disable make.graphic.viewport. BZ #467368
 - Add missing XEP namespace. BZ #467256
 - Add catch for ValidateTables where table for tgroup could not be found. BZ #468789
@@ -175,6 +175,9 @@ rm -rf $RPM_BUILD_ROOT
 - Fix ol display in article. BZ #472491
 - Added section of Drafting rules. (bforte)
 - Fix CCS display of image in term.
+- Add product URL. Modify header to use product url.
+- Fix formalpara missing div. BZ #473843
+- Fix OL missing margin in article. BZ #473844
 
 * Thu Oct 16 2008 Jeff Fearn <jfearn@redhat.com> 0.38
 - Fix inline tags removing following new line in verbatim tags. BZ #461369
