--- a/publican-jboss/make/Makefile.JBoss
+++ b/publican-jboss/make/Makefile.JBoss
@@ -1,4 +1,5 @@
-DOC_URL		= http://www.redhat.com/docs
+PROD_URL	?= https://www.jboss.com
+DOC_URL		?= http://www.redhat.com/docs
 STRICT		= 1
 
 pre::
