--- a/publican-redhat/make/Makefile.RedHat
+++ b/publican-redhat/make/Makefile.RedHat
@@ -1,5 +1,5 @@
-
-DOC_URL		= http://www.redhat.com/docs
+PROD_URL	?= http://www.redhat.com
+DOC_URL		?= http://www.redhat.com/docs
 STRICT		= 1
 
 # hack, RHEL SHIPPED products where in RHEL5 before this multi-product layout was in place
