tweak TOC white space
git-svn-id: file:///srv/svn/publican/trunk@596 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -146,8 +146,9 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
-* Tue Dec 2 2008 Jeff Fearn <jfearn@redhat.com> 0.30-1
+* Tue Dec 2 2008 Jeff Fearn <jfearn@redhat.com> 0.39-2
 - Fix DRAFT mode in web docs.
+- Fix TOC CSS spacing.
 
 * Mon Dec 1 2008 Jeff Fearn <jfearn@redhat.com> 0.39
 - Disable make.graphic.viewport. BZ #467368
