--- a/publican-gimp/make/Makefile.GIMP
+++ b/publican-gimp/make/Makefile.GIMP
@@ -1,6 +1,3 @@
-# Overide catalog.
-CATALOGS	= XML_CATALOG_FILES="$(COMMON_CONFIG)/xsl/docbook/dtd-4.5/catalog.xml $(COMMON_CONFIG)/xsl/docbook/1.72.0/catalog.xml"
-#XML_DEBUG_CATALOG=1
-
-DOC_URL		= http://www.gimp.org/docs
+DOC_URL		?= http://www.gimp.org/docs
+PROD_URL	?= http://www.gimp.org
 
