fix color space BZ #474075
git-svn-id: file:///srv/svn/publican/trunk@602 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/Makefile
+++ b/publican-fedora/Makefile
@@ -45,7 +45,7 @@ dist: clean
 	@echo "End $@"
 
 upload-dist: dist
-	@scp $(TAR_NAME).tgz fedorahosted.org:publican
+	@scp $(TAR_NAME).tgz publican-$(BRAND).spec fedorahosted.org:publican
 
 clean:
 	@echo "Start $@"
