Fix missing syntax highlighting templates. BZ #474077
git-svn-id: file:///srv/svn/publican/trunk@603 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
 Version:	0.39
-Release:	2.t2%{?dist}
+Release:	2.t3%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content, Book_Template, Set_Template, Article_Template
@@ -146,9 +146,10 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
-* Tue Dec 2 2008 Jeff Fearn <jfearn@redhat.com> 0.39-2
+* Tue Dec 2 2008 Jeff Fearn <jfearn@redhat.com> 0.40
 - Fix DRAFT mode in web docs.
 - Fix TOC CSS spacing.
+- Fix missing syntax highlighting templates. BZ #474077
 
 * Mon Dec 1 2008 Jeff Fearn <jfearn@redhat.com> 0.39
 - Disable make.graphic.viewport. BZ #467368
