Fix multiple authors in revhistory. Patch by: Paul W. Frields. BZ #478552
git-svn-id: file:///srv/svn/publican/trunk@607 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -150,7 +150,8 @@ rm -rf $RPM_BUILD_ROOT
 - Fix DRAFT mode in web docs.
 - Fix TOC CSS spacing.
 - Fix missing syntax highlighting templates. BZ #474077
-- Added appendix to user guid for Makefile parameters.
+- Added appendix to user guide for Makefile parameters.
+- Fix multiple authors in revhistory. Patch by: Paul W. Frields. BZ #478552
 
 * Mon Dec 1 2008 Jeff Fearn <jfearn@redhat.com> 0.39
 - Disable make.graphic.viewport. BZ #467368
