Fix multiple authors in revhistory. Patch by: Paul W. Frields. BZ #478552 Add LICENSE override for RPMs. BZ #477720 Fix empty change log. BZ #477728 Fix spec file location. BZ #477704
git-svn-id: file:///srv/svn/publican/trunk@608 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss/make/Makefile.JBoss
+++ b/publican-jboss/make/Makefile.JBoss
@@ -1,6 +1,7 @@
 PROD_URL	?= https://www.jboss.com
 DOC_URL		?= http://www.redhat.com/docs
 STRICT		= 1
+LICENSE		= Creative Commons Attribution-NonCommercial-ShareAlike
 
 pre::
 	@if [[ "$(PRODUCT)" == "Documentation" ]]; then \
