--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -85,6 +85,7 @@ include $(COMMON_CONFIG)/make/Makefile.$(BRAND)
 endif
 
 STRICT		?= 0
+LICENSE		?= GFDL
 
 ###############################################################################
 ######### SPEC File Vars ##############
