fix rpmlint errors in desktop spec files
git-svn-id: file:///srv/svn/publican/trunk@610 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/make/Makefile.templates
+++ b/publican/make/Makefile.templates
@@ -538,6 +538,7 @@ spec-${1}:: tar-${1}
 		--stringparam rpmrel "$(${1}_RPM_RELEASE)" \
 		--stringparam license "$(LICENSE)" \
 		--stringparam url "$(DOC_URL)" \
+		--stringparam brand "publican-$(LC_BRAND)" \
 		--stringparam log "$$$$(<tmp/changelog.txt)" \
 		-o tmp/rpm/SPECS/$(TAR_NAME)-${1}.spec \
 		$(SPEC_XSL) tmp/${1}/xml/$(DOC_TYPE)_Info.xml
