fix minimum font size breaking desktop toc
git-svn-id: file:///srv/svn/publican/trunk@612 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -155,6 +155,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fix empty change log. BZ #477728
 - Fix spec file location. BZ #477704
 - Added newline after country. BZ #477573
+- Fix minimum font size breaking TOC. BZ #476884
 
 * Mon Dec 1 2008 Jeff Fearn <jfearn@redhat.com> 0.39
 - Disable make.graphic.viewport. BZ #467368
